# safe-discriminant

./: Cargo.toml  LICENSE  Readme.md
safe-discriminant/: Cargo.toml
safe-discriminant-derive/: Cargo.toml
safe-discriminant-derive/src/: lib.rs
safe-discriminant/src/: lib.rs
safe-discriminant/tests/fail/: do_nothing_last.rs  do_nothing_last.stderr  double_repr.rs  double_repr.stderr  fake_repr1.rs  fake_repr1.stderr  fake_repr2.rs  fake_repr2.stderr  fake_repr3.rs  fake_repr3.stderr  missing_all_disc.rs  missing_all_disc.stderr  missing_one_disc.rs  missing_one_disc.stderr  missing_repr.rs  missing_repr.stderr  multi_repr.rs  multi_repr.stderr  remove_disc.rs  remove_disc.stderr  remove_repr_disc1.rs  remove_repr_disc1.stderr  remove_repr_disc2.rs  remove_repr_disc2.stderr  repr_c_only.rs  repr_c_only.stderr
safe-discriminant/tests/pass/: basic_enum.rs  do_nothing_first.rs  generics_enum.rs  generics_with_lifetimes_enum.rs  mixed_enum.rs  remove_repr.rs  struct_enums.rs  tuple_enums.rs
