[workspace]
resolver = "2"
members = ["safe-discriminant", "safe-discriminant-derive"]

[workspace.dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = {version = "2.0.72", features = ["full"]}
trybuild = "1.0.99"
safe-discriminant-derive = {version = "0.1.0", path = "./safe-discriminant-derive"}
