[package]
name = "safe-discriminant-derive"
version = "0.1.0"
edition = "2021"
readme = "../Readme.md"
license = "Apache-3.0"
keywords = ["no_std", "enums"]
description = """A minimalistic, `no_std` compatible trait and procedural macro \
                 for extracting discriminants from enums at zero cost.""""
[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

