[package]
name = "safe-discriminant-derive"
version = "0.1.0"
edition = "2021"
readme = "../Readme.md"
license = "Apache-3.0"
keywords = ["no_std", "enums"]
description = """A minimalistic, `no_std` compatible trait and procedural macro \
                 for extracting discriminants from enums at zero cost.""""
documentation = "https://docs.rs/safe_discriminant_derive"
homepage = "https://docs.rs/safe_discriminant"
repository = "https://github.com/oddcoder/safe-discriminant"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

