[package]
name = "safe-discriminant"
version = "0.1.0"
edition = "2021"
readme = "../Readme.md"
license = "BSD-3-Clause"
keywords = ["no_std", "enums"]
description = """A minimalistic, `no_std` compatible trait and procedural macro \
                 for extracting discriminants from enums at zero cost."""
documentation = "https://docs.rs/safe_discriminant"
homepage = "https://docs.rs/safe_discriminant"
repository = "https://github.com/oddcoder/safe-discriminant"
[dependencies]
safe-discriminant-derive = {workspace = true}

[dev-dependencies]
trybuild = { workspace = true }
safe-discriminant-derive = {workspace = true, features = ["test-utils"]}
